--- a/ERP/Areas/User/Views/Account/ForgotPassword.cshtml
+++ b/ERP/Areas/User/Views/Account/ForgotPassword.cshtml
@@ -1,2 +1,24 @@
-﻿
-<h3>Password recovery</h3>
+﻿@model string
+
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<div class="login">
+    <h2>Password recovery</h2>
+
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(false, "", new { @class = "alert alert-danger" })
+
+    @using (Html.BeginForm("ForgotPassword", "Account", new { area = "User" }, FormMethod.Post))
+    {
+        <input placeholder="User name or email" class="input-md" name="UserNameOrEmail" required />
+
+        <button type="submit" class="btn btn-primary btn-block btn-large"> Send password reset link </button>
+    }
+    
+    <br />
+
+    @Html.ActionLink("Return to login", "Login")
+</div>
+
