--- a/ERP/Views/Shared/_Layout.cshtml
+++ b/ERP/Views/Shared/_Layout.cshtml
@@ -8,8 +8,7 @@
     <title>@ViewBag.Title</title>
     
 </head>
-<body>
-    
+<body>    
     <div class="container body-content">
         @RenderBody()
         <div class="footer navbar-fixed-bottom center col-md-6">
@@ -22,5 +21,6 @@
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 </body>
 </html>
