Reset password email is being sent. Console tests updated.

--- a/ERP/Areas/User/Views/Account/Register.cshtml
+++ b/ERP/Areas/User/Views/Account/Register.cshtml
@@ -30,3 +30,7 @@
         <input type="submit" value="Sign in" class="btn btn-primary" />
     </div>
 }
+
+<br />
+
+@Html.ActionLink("Return to login", "Login")
