--- a/ERP/Areas/User/Views/Account/ForgotPassword.cshtml
+++ b/ERP/Areas/User/Views/Account/ForgotPassword.cshtml
@@ -7,6 +7,13 @@
 <div class="login">
     <h2>Password recovery</h2>
 
+    @if (@ViewBag.Success != null)
+    {
+        <div class="alert alert-success">
+            @ViewBag.Success
+        </div>
+    }
+
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(false, "", new { @class = "alert alert-danger" })
 
@@ -14,7 +21,7 @@
     {
         <input placeholder="User name or email" class="input-md" name="UserNameOrEmail" required />
 
-        <button type="submit" class="btn btn-primary btn-block btn-large"> Send password reset link </button>
+        <button type="submit" class="btn btn-primary btn-block btn-large"> Reset password </button>
     }
     
     <br />
