Logging out done.

--- a/ERP/Views/Menu/ShowMenu.cshtml
+++ b/ERP/Views/Menu/ShowMenu.cshtml
@@ -39,7 +39,7 @@
             <a href="#" class="dropdown-item">
                 Settings
             </a>
-            <a href="#" class="dropdown-item">
+            <a href="@Url.Action("LogOut", "Account", new { area = "User" })" class="dropdown-item">
                 Log out
             </a>
         </div>
