Authorization and logging out done.

--- a/ERP/Areas/User/Views/User/ForgotPassword.cshtml
+++ b/ERP/Areas/User/Views/User/ForgotPassword.cshtml
@@ -17,7 +17,7 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(false, "", new { @class = "alert alert-danger" })
 
-    @using (Html.BeginForm("ForgotPassword", "Account", new { area = "User" }, FormMethod.Post))
+    @using (Html.BeginForm("ForgotPassword", "User", new { area = "User" }, FormMethod.Post))
     {
         <input placeholder="User name or email" class="input-md" name="UserNameOrEmail" required />
 
