--- a/ERP/Areas/User/Views/User/ResetPassword.cshtml
+++ b/ERP/Areas/User/Views/User/ResetPassword.cshtml
@@ -17,7 +17,7 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(false, "", new { @class = "alert alert-danger" })
 
-    @using (Html.BeginForm("ResetPassword", "Account", new { area = "User" }, FormMethod.Post))
+    @using (Html.BeginForm("ResetPassword", "User", new { area = "User" }, FormMethod.Post))
     {
         @Html.PasswordFor(x => x.Password, new { @class = "input-md", placeholder = "Password" })
 
@@ -26,7 +26,7 @@
         <button type="submit" class="btn btn-primary btn-block btn-large"> Change password </button>
     }
     <br />
-        @Html.RouteLink("Forgot password?", "User_default", new { action = "ForgotPassword", controller = "Account" })
+        @Html.RouteLink("Forgot password?", "User_default", new { action = "ForgotPassword", controller = "User" })
 
     <br />
 
