--- a/ERP/Areas/Admin/Views/Register.cshtml
+++ b/ERP/Areas/Admin/Views/Register.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post))
+@using (Html.BeginForm("Register", "User", FormMethod.Post))
 {
     @Html.ValidationSummary(true)
 
